last button alignment fixed

--- a/web/w2teamActivity/styles.css
+++ b/web/w2teamActivity/styles.css
@@ -15,7 +15,7 @@
   font-weight: bold;
 }
 
-#clickmeBtn, #changeColorBtn, #changeVisibilityBtn{
+#clickmeBtn, #changeColorBtn, #changeVisibilityBtn, #changeVisibilityBtn{
   margin: .5rem auto;
   display: block;
 }
